--- a/frontend/src/app/first-section/data-binding/data-binding.component.html
+++ b/frontend/src/app/first-section/data-binding/data-binding.component.html
@@ -4,7 +4,7 @@
             <h5 class="title">Data Binding with String Interpolation</h5>
             <div>
                 <h6>With string interpolation, we can...</h6>
-                <p>using double bracket notation to use a determined variable within our exported class to create dinamic data mutation.</p>
+                <p>use double bracket notation to use a determined variable within our exported class to create dinamic data mutation.</p>
                 <p>this only happens while using forms module, from Angular/core, wich provides the ngModel directive.</p>
                 <div class="input-btn">    
                     <input
