--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12">
       <h4 class="title">Sections:</h4>
-      <div class="multi-buttons">
+      <div class="multi-elements">
         <button
           class="btn btn-primary"
           (click) = "showOnClick(0)"
