--- a/frontend/src/app/first-section/first-section.component.html
+++ b/frontend/src/app/first-section/first-section.component.html
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-xs-12-">
         <h4 class="title">Topics:</h4>
-        <div class="col-xs-12 multi-buttons">
+        <div class="multi-elements">
           <button 
             class="btn btn-primary"
             (click) = "showOnClick(0)"
