--- a/frontend/src/app/second-section/second-section.component.html
+++ b/frontend/src/app/second-section/second-section.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12 multi-buttons">
+    <div class="col-xs-12 multi-elements">
         <button
         class="btn btn-primary"
         (click) = "showOnClick(0)"
