--- a/frontend/src/app/first-section/directives/directives.component.css
+++ b/frontend/src/app/first-section/directives/directives.component.css
@@ -5,7 +5,11 @@
     text-align: center;
     
     }
-    
+
+    /* .multi-elements * {
+        margin-left: 2%;
+    }
+     */
     .class1 {
     
     background-color: red;
