--- a/frontend/src/app/first-section/event-binding/event-binding.component.html
+++ b/frontend/src/app/first-section/event-binding/event-binding.component.html
@@ -4,9 +4,8 @@
             <h5 class="title">Event Binding</h5>
             <div>
                 <p>We have - in JavaScript - the onClick property 
-                for event handlers, but we can also use the click property to 
-                run a function or some specified piece of code, as we can 
-                see bellow...</p>
+                for event handlers, but we can also use the click property - provided to us, Angular, by the framework 
+                itself to run a function or some specified piece of code, as we can see bellow...</p>
                 <button 
                 class="btn btn-primary" 
                 (click) = "createPhp($event); phpCreated= true" 
