Added to 'char generation' application in second section binding component event and property binding between component - thus allowing it to work. Also renamed folders in the second section based in it's functions.

--- a/frontend/src/app/second-section/Binding/binding.component.html
+++ b/frontend/src/app/second-section/Binding/binding.component.html
@@ -18,5 +18,5 @@
         </div>
     </label>
 </div>
-<servers-creation-component *ngIf = "showWindow[0]"></servers-creation-component>
-<app-account-generation *ngIf = "showWindow[1]"></app-account-generation>
+<app-servers-creation *ngIf = "showWindow[0]"></app-servers-creation>
+<app-char-generation *ngIf = "showWindow[1]"></app-char-generation>
