--- a/frontend/src/app/second-section/Binding/char-generation/char-data/char-data.component.html
+++ b/frontend/src/app/second-section/Binding/char-generation/char-data/char-data.component.html
@@ -22,6 +22,7 @@
         >
         <button
             class="btn btn-outline-success"
+            (click) = "onCharCreated()"
         >
             Create Sheet
         </button>
