--- a/frontend/src/app/second-section/Binding/char-generation/char-component/char-component.component.html
+++ b/frontend/src/app/second-section/Binding/char-generation/char-component/char-component.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="multi-elements">
         <p>{{character?.name}}</p>
-        <p>{{character?.passive}}</p>
-        <p>{{character?.skill}}</p>
+        <p><strong>{{character?.passiveName}}</strong>{{character?.passive}}</p>
+        <p><strong>{{character?.skillName}}</strong>{{character?.skill}}</p>
     </div>
 </div>
